fixed menu bar spacing and logic on syllabus page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -88,6 +88,8 @@ h2{
   font-family: var(--font-small-caps);
   font-variant: small-caps;
   font-size: 1.2rem;
+  margin-left: 2.5px;
+  margin-right: 2.5px;
 }
 
 
